labs/proyecto-final/deployment-private.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-private
  namespace: private
spec:
  replicas: 2
  selector:
    matchLabels:
      app: deploy-private
  template:
    metadata:
      labels:
        app: deploy-private
    spec:
      containers:
      - name: private-container
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: private-storage
          mountPath: /usr/share/nginx/html
      volumes:
      - name: private-storage
        persistentVolumeClaim:
          claimName: practica2-pvc
