labs/proyecto-final/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-public
  namespace: public
  labels:
    app: nginx-public
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-private
  namespace: private
  labels:
    app: nginx-private
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
