labs/proyecto-final/public-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public-api
  namespace: public
spec:
  replicas: 2
  selector:
    matchLabels:
      app: public-api
  template:
    metadata:
      labels:
        app: public-api
    spec:
      containers:
        - name: public-api
          image: cachac/kubelabs_public_api:1.0.0
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "200Mi"
              cpu: "200m"
            requests:
              memory: "100Mi"
              cpu: "100m"
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 3080
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 3080
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
