labs/proyecto-final/websocket-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket
  namespace: public
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websocket
  template:
    metadata:
      labels:
        app: websocket
    spec:
      containers:
        - name: websocket
          image: cachac/kubelabs_websocket:1.0.6
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 3081
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 3081
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
