labs/proyecto-final/public-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: public-api-service
  namespace: public
spec:
  selector:
    app: public-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
