labs/proyecto-final/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: public-service
  namespace: public
spec:
  type: NodePort
  selector:
    app: nginx-public
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
---
apiVersion: v1
kind: Service
metadata:
  name: private-service
  namespace: private
spec:
  type: NodePort
  selector:
    app: nginx-private
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30081
