labs/proyecto-final/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: public
spec:
  selector:
    app: webapp
  ports:
  - port: 80
    targetPort: 8080
