labs/proyecto-final/public-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-api-ingress
  namespace: public
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.fercanap.kubelabs.dev
      http:
        paths:
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: public-api-service
                port:
                  number: 3000
