labs/proyecto-final/websocket-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: websocket-ingress
  namespace: public
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: websocket.fercanap.kubelabs.dev
      http:
        paths:
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: websocket-service
                port:
                  number: 80
